# sentinel

./: Cargo.toml  README.markdown
.github/workflows/: release.yml  rust.yml
packaging/: debian.sh
packaging/systemd/: sentinel.service
src/: lib.rs  main.rs
src/modules/: auth.rs  err.rs  info.rs  mod.rs  runner.rs  services.rs  tests.rs  units.rs
